fix(authentication) add margin between vertical inputs to prevent errors text box to be so close and unreadable

--- a/dashboard-front/src/app/page/authentication/authentication.component.css
+++ b/dashboard-front/src/app/page/authentication/authentication.component.css
@@ -19,3 +19,7 @@
     align-items: center;
     justify-content: space-around;
 }
+
+mat-form-field:not(:first-child) {
+    margin-top: 10px;
+}
